config/policy/openbao-restrict-service-catalog-mutations.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: openbao-restrict-service-catalog-mutations
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
      - apiGroups: ["openbao.org"]
        apiVersions: ["v1alpha1"]
        operations: ["CREATE", "UPDATE", "DELETE"]
        resources:
          - openbaobackupauthprofiles
          - openbaobackupbackends
          - openbaoserviceprofiles
          - openbaoserviceofferings
          - openbaobootstrapprofiles
          - openbaoexposureclasses
          - openbaoingresspolicies
          - openbaostorageprofiles
          - openbaounsealprofiles
          - openbaoruntimeprofiles
          - openbaoobservabilityprofiles
          - openbaonetworkprofiles
          - openbaoupgradepolicies
          - openbaobackupprofiles
          - openbaobackuptargets
          - openbaoentrypoints
          - openbaotransferprofiles
  variables:
    - name: operator_namespace
      expression: >-
        'openbao-operator-system'
    - name: controller_serviceaccount_name
      expression: >-
        'openbao-operator-controller'
    - name: provisioner_serviceaccount_name
      expression: >-
        'openbao-operator-provisioner'
    - name: controller_principal
      expression: >-
        'system:serviceaccount:' + variables.operator_namespace + ':' + variables.controller_serviceaccount_name
    - name: provisioner_principal
      expression: >-
        'system:serviceaccount:' + variables.operator_namespace + ':' + variables.provisioner_serviceaccount_name
    - name: is_operator_controller
      expression: >-
        request.userInfo.username == variables.controller_principal
    - name: is_operator_provisioner
      expression: >-
        request.userInfo.username == variables.provisioner_principal
    - name: is_operator_identity
      expression: >-
        variables.is_operator_controller || variables.is_operator_provisioner
  validations:
    - expression: >-
        !variables.is_operator_identity
      message: "Controller and provisioner service accounts may not mutate OpenBao service catalog objects."
